Capture the collection name and compare during notification

--- a/Documentation/Jinaga Modeling.ipynb
+++ b/Documentation/Jinaga Modeling.ipynb
@@ -1,37 +1,22 @@
 {
- "metadata": {
-  "kernelspec": {
-   "display_name": ".NET (C#)",
-   "language": "C#",
-   "name": ".net-csharp"
-  },
-  "language_info": {
-   "name": "C#"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "C# records only live in memory in a single process. If we want to take that idea of immutable records beyond the .NET runtime, we'll need some help. That's what Jinaga does.\n",
     "\n",
     "We can store immutable records -- what Jinaga calls _facts_ -- in a local database. And we can share them with other computers. And we get the same semantics: two facts with the same type and fields are actually the same fact."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "#r \"nuget: Jinaga.UnitTest, 0.1.0\"\n",
-    "using Jinaga;\n",
-    "\n",
-    "[FactType(\"Jinaga.User\")]\n",
-    "record User(string publicKey);\n",
-    "\n",
-    "string publicKey = \"--- PUBLIC KEY ---\";\n",
-    "new User(publicKey)"
-   ],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -44,21 +29,40 @@
     },
     {
      "data": {
-      "text/html": ""
+      "text/html": []
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   }
+   "source": [
+    "#r \"nuget: Jinaga.UnitTest, 0.1.0\"\n",
+    "using Jinaga;\n",
+    "\n",
+    "[FactType(\"Jinaga.User\")]\n",
+    "record User(string publicKey);\n",
+    "\n",
+    "string publicKey = \"--- PUBLIC KEY ---\";\n",
+    "new User(publicKey)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "using Jinaga.UnitTest;\n",
     "\n",
@@ -68,48 +72,20 @@
     "var secondUser = await j.Fact(new User(publicKey));\n",
     "\n",
     "firstUser.Equals(secondUser)"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/html": ""
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "#r \"nuget: Jinaga.Graphviz, 0.1.0\"\n",
-    "using Jinaga.Graphviz;\n",
-    "\n",
-    "[FactType(\"Corporate.Company\")]\n",
-    "record Company(string identifier);\n",
-    "\n",
-    "[FactType(\"Corporate.Employee\")]\n",
-    "record Employee(Company company, int employeeNumber);\n",
-    "\n",
-    "var contoso = await j.Fact(new Company(\"Contoso\"));\n",
-    "var jane = await j.Fact(new Employee(contoso, 1));\n",
-    "var bob = await j.Fact(new Employee(contoso, 2));\n",
-    "\n",
-    "var employees = await j.Query(contoso, Given<Company>.Match((company, facts) =>\n",
-    "    facts.OfType<Employee>().Where(employee => employee.company == company)\n",
-    "));\n",
-    "Renderer.RenderFacts(employees)"
-   ],
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/html": ""
+      "text/html": []
      },
      "metadata": {},
      "output_type": "display_data"
@@ -181,15 +157,43 @@
      "output_type": "display_data"
     }
    ],
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   }
+   "source": [
+    "#r \"nuget: Jinaga.Graphviz, 0.1.0\"\n",
+    "using Jinaga.Graphviz;\n",
+    "\n",
+    "[FactType(\"Corporate.Company\")]\n",
+    "record Company(string identifier);\n",
+    "\n",
+    "[FactType(\"Corporate.Employee\")]\n",
+    "record Employee(Company company, int employeeNumber);\n",
+    "\n",
+    "var contoso = await j.Fact(new Company(\"Contoso\"));\n",
+    "var jane = await j.Fact(new Employee(contoso, 1));\n",
+    "var bob = await j.Fact(new Employee(contoso, 2));\n",
+    "\n",
+    "var employees = await j.Query(contoso, Given<Company>.Match((company, facts) =>\n",
+    "    facts.OfType<Employee>().Where(employee => employee.company == company)\n",
+    "));\n",
+    "Renderer.RenderFacts(employees)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "[FactType(\"Corporate.Employee.Name\")]\n",
     "record EmployeeName(Employee employee, string name, EmployeeName[] prior);\n",
@@ -214,23 +218,19 @@
     ");\n",
     "var names = await j.Query(contoso, namesOfEmployees);\n",
     "Renderer.ListTypes(typeof(EmployeeName))"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/html": ""
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   }
+   ]
   }
  ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": ".NET (C#)",
+   "language": "C#",
+   "name": ".net-csharp"
+  },
+  "language_info": {
+   "name": "C#"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
