Update restaurant model

--- a/Documentation/Examples/Restaurant model.ipynb
+++ b/Documentation/Examples/Restaurant model.ipynb
@@ -125,19 +125,19 @@
    ],
    "source": [
     "[FactType(\"Restaurant.Server\")]\n",
-    "record Server(string identifier);\n",
+    "record Server(string identifier) {}\n",
     "\n",
     "[FactType(\"Restaurant.Table\")]\n",
-    "record Table(int tableNumber);\n",
+    "record Table(int tableNumber) {}\n",
     "\n",
     "[FactType(\"Restaurant.TableAssignment\")]\n",
-    "record TableAssignment(Server server, Table table);\n",
+    "record TableAssignment(Server server, Table table) {}\n",
     "\n",
     "[FactType(\"Restaurant.Party\")]\n",
-    "record Party(DateTime arrival);\n",
+    "record Party(DateTime arrival) {}\n",
     "\n",
     "[FactType(\"Restaurant.PartySeated\")]\n",
-    "record PartySeated(Party party, Table table);\n",
+    "record PartySeated(Party party, Table table) {}\n",
     "\n",
     "\n",
     "Jinaga.Graphviz.Renderer.RenderTypes(typeof(TableAssignment), typeof(PartySeated))"
