Updated the examples

--- a/Documentation/Rosetta Stone.ipynb
+++ b/Documentation/Rosetta Stone.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Jinaga.UnitTest, 0.1.1</span></li></ul></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>Jinaga.UnitTest, 0.4.0</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -23,18 +23,18 @@
     }
    ],
    "source": [
-    "#r \"nuget: Jinaga.UnitTest, 0.1.1\""
+    "#r \"nuget: Jinaga.UnitTest\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -56,6 +56,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -93,13 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -117,6 +118,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -125,28 +127,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.csharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "company: Model.Company {\r\n",
-       "    employment: Model.Employment = company S.company Model.Employment\r\n",
-       "    N(\r\n",
-       "        employment: Model.Employment {\r\n",
-       "            termination: Model.Termination = employment S.employment Model.Termination\r\n",
-       "        }\r\n",
-       "    )\r\n",
-       "}\r\n",
-       "employment"
+       "(company: Model.Company) {\n",
+       "    employment: Model.Employment [\n",
+       "        employment->company: Model.Company = company\n",
+       "        !E {\n",
+       "            termination: Model.Termination [\n",
+       "                termination->employment: Model.Employment = employment\n",
+       "            ]\n",
+       "        }\n",
+       "    ]\n",
+       "} => employment\n"
       ]
      },
      "metadata": {},
@@ -154,7 +157,7 @@
     }
    ],
    "source": [
-    "allEmployeesOfCompany.Pipeline.ToDescriptiveString() + allEmployeesOfCompany.Projection.ToDescriptiveString()"
+    "allEmployeesOfCompany.ToString()"
    ]
   }
  ],
